Improve APIs to adding query events to optional query param
